tests/conflict_markers_multiple.sy

start :: fn do
<<<<<<< HEAD
    print extern_test(4.0)
=======
    print extern_test(5.0)
>>>>>>> 2

<<<<<<< HEAD
    print extern_test(4.0)
=======
    print extern_test(5.0)
>>>>>>> 2
end
// error: GitConflictError
// error: GitConflictError
